--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #34c0e7;
+    color: #007abd;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -3204,7 +3204,7 @@ input[type="button"].btn-block {
   .nav-link:hover, .nav-link:focus {
     text-decoration: none; }
   .nav-link.disabled {
-    color: #6c757d; }
+    color: #202020; }
 
 .nav-tabs {
   border-bottom: 1px solid #dee2e6; }
@@ -3215,7 +3215,7 @@ input[type="button"].btn-block {
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem; }
     .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-      border-color: #e9ecef #e9ecef #dee2e6; }
+      border-color: #434343 #3a3a3a #383838; }
     .nav-tabs .nav-link.disabled {
       color: #6c757d;
       background-color: transparent;
@@ -3235,7 +3235,7 @@ input[type="button"].btn-block {
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: rgb(39, 39, 39);
   background-color: #78d5ef; }
 
 .nav-fill .nav-item {
@@ -3596,11 +3596,11 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
 
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5); }
+  color: rgba(43, 43, 43, 0.5); }
   .navbar-dark .navbar-text a {
-    color: #fff; }
+    color: rgb(57, 57, 57); }
     .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
-      color: #fff; }
+      color: rgb(72, 72, 72); }
 
 .card {
   position: relative;
@@ -7288,7 +7288,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 body {
   font-family: "Poppins", Arial, sans-serif;
-  background: #151111;
+  background: #ffffff;
   font-size: 15px;
   line-height: 1.8;
   font-weight: 300;
@@ -7308,9 +7308,9 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #c49b63; }
+  color: #007abd; }
   a:hover, a:active, a:focus {
-    color: #c49b63;
+    color: #007abd;
     outline: none !important;
     text-decoration: none !important; }
 
@@ -7322,7 +7322,7 @@ h1, h2, h3, h4, h5,
   font-family: "Josefin Sans", Arial, sans-serif; }
 
 .text-primary {
-  color: #c49b63 !important; }
+  color: #007abd !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -7334,7 +7334,7 @@ h1, h2, h3, h4, h5,
   border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #000 !important;
+      background: #fff !important;
       position: relative;
       top: 0; } }
   .ftco-navbar-light .navbar-brand {
@@ -7342,14 +7342,14 @@ h1, h2, h3, h4, h5,
     font-family: "Josefin Sans", Arial, sans-serif; }
     @media (min-width: 768px) {
       .ftco-navbar-light .navbar-brand {
-        color: #fff; } }
+        color: #000; } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
     font-size: 13px;
     padding-top: .9rem;
     padding-bottom: .9rem;
     padding-left: 0;
     padding-right: 0;
-    color: rgba(255, 255, 255, 0.9);
+    color: #000;
     font-weight: 400;
     position: relative;
     text-transform: uppercase;
@@ -7363,7 +7363,7 @@ h1, h2, h3, h4, h5,
         padding-right: 20px;
         color: rgba(255, 255, 255, 0.9); } }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:focus {
-      color: #c49b63; }
+      color: #007abd; }
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover:after, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:focus:after {
         opacity: 1; }
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
@@ -7376,7 +7376,7 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item {
       font-size: 13px;
       color: rgba(255, 255, 255, 0.5);
-      background: #0d0d0d; }
+      background: #000; }
       .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:hover, .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:focus {
         color: #fff; }
   .ftco-navbar-light .navbar-nav > .nav-item.ftco-seperator {
@@ -7402,7 +7402,7 @@ h1, h2, h3, h4, h5,
     position: relative; }
     .ftco-navbar-light .navbar-nav > .nav-item.cart > a .icon {
       font-size: 20px;
-      color: #fff; }
+      color: #000; }
     .ftco-navbar-light .navbar-nav > .nav-item.cart > a .bag {
       position: absolute;
       top: 10px;
@@ -7410,21 +7410,21 @@ h1, h2, h3, h4, h5,
       width: 24px;
       height: 24px;
       text-align: center;
-      background: #f8b500;
+      background: #EE4B2B;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
       border-radius: 50%; }
       .ftco-navbar-light .navbar-nav > .nav-item.cart > a .bag small {
         font-weight: 400;
-        color: #000; }
+        color: #fff; }
   @media (max-width: 767.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.cta {
       margin-bottom: 20px; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    border: 1px solid #c49b63;
-    background: #c49b63;
+    border: 1px solid #007abd;
+    background: #007abd;
     padding-top: .5rem;
     padding-bottom: .5rem;
     padding-left: 20px;
@@ -7439,15 +7439,15 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #fff; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #c49b63;
-      border: 1px solid #c49b63; }
+      background: #007abd;
+      border: 1px solid #007abd; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored span {
-    border-color: #c49b63; }
+    border-color: #007abd; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #c49b63; }
+    color: #007abd; }
     .ftco-navbar-light .navbar-nav > .nav-item.active > a:after {
       opacity: 1;
-      background: #c49b63; }
+      background: #007abd; }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.8) !important;
@@ -7464,17 +7464,17 @@ h1, h2, h3, h4, h5,
     left: 0;
     top: 0;
     margin-top: -130px;
-    background: #151111 !important;
+    background: #0047AB !important;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     border: none; }
     .ftco-navbar-light.scrolled .nav-item > .nav-link {
       color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #c49b63 !important; }
+      color: #007abd !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #c49b63;
+      background: #007abd;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -7489,7 +7489,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #c49b63; }
+      border-color: #007abd; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -7515,7 +7515,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #c49b63 !important; }
+        color: #007abd !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -7615,7 +7615,7 @@ h1, h2, h3, h4, h5,
         .owl-carousel.home-slider .slider-item .slider-text .subheading {
           font-family: "Great Vibes", cursive;
           font-size: 30px;
-          color: #c49b63; }
+          color: #007abd; }
         .owl-carousel.home-slider .slider-item .slider-text h1 {
           text-transform: uppercase;
           font-size: 40px;
@@ -7723,7 +7723,7 @@ h1, h2, h3, h4, h5,
   background: #fafafa !important; }
 
 .bg-primary {
-  background: #c49b63; }
+  background: #007abd; }
 
 .btn {
   cursor: pointer;
@@ -7737,20 +7737,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #c49b63;
-    border: 1px solid #c49b63;
+    background: #007abd;
+    border: 1px solid #007abd;
     color: #000; }
     .btn.btn-primary:hover {
-      border: 1px solid #c49b63;
+      border: 1px solid #007abd;
       background: transparent;
-      color: #c49b63; }
+      color: #007abd; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #c49b63;
+      border: 1px solid #007abd;
       background: transparent;
-      color: #c49b63; }
+      color: #007abd; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #c49b63;
+        background: #007abd;
         color: #fff; }
   .btn.btn-white {
     background: #fff;
@@ -7766,8 +7766,8 @@ h1, h2, h3, h4, h5,
       border-width: 1px;
       color: #fff; }
       .btn.btn-white.btn-outline-white:hover, .btn.btn-white.btn-outline-white:focus, .btn.btn-white.btn-outline-white:active {
-        background: #c49b63;
-        border-color: #c49b63;
+        background: #007abd;
+        border-color: #007abd;
         color: #000; }
   .btn.btn-outline-black {
     border-color: black;
@@ -7803,7 +7803,7 @@ h1, h2, h3, h4, h5,
       margin-bottom: 0; }
   .ftco-intro .wrap .book {
     width: 35%;
-    background: #c49b63; }
+    background: #007abd; }
     @media (max-width: 767.98px) {
       .ftco-intro .wrap .book {
         width: 100%; } }
@@ -7816,7 +7816,7 @@ h1, h2, h3, h4, h5,
   .ftco-intro .wrap .icon {
     width: 40px; }
     .ftco-intro .wrap .icon span {
-      color: #c49b63;
+      color: #007abd;
       font-size: 20px; }
 
 .ftco-about .one-half {
@@ -7835,11 +7835,11 @@ h1, h2, h3, h4, h5,
     .ftco-about .one-half .overlap {
       margin-left: -150px;
       padding: 40px;
-      background: rgba(0, 0, 0, 0.5); } }
+      background: #000; } }
 
 .ftco-services {
   color: #1d150b;
-  background: #c49b63; }
+  background: #007abd; }
   .ftco-services .heading-section h2 {
     color: black; }
 
@@ -7852,17 +7852,17 @@ h1, h2, h3, h4, h5,
   bordeR: 1px solid #674c27; }
   .services .icon span {
     font-size: 60px;
-    color: #1d150b;
+    color: #c49b63;
     z-index: 1; }
 
 .services h3 {
   font-size: 18px;
   margin-bottom: 20px;
-  color: black;
+  color: white;
   text-transform: uppercase; }
 
 .services .media-body {
-  color: #1d150b; }
+  color: #D3D3D3; }
 
 .services-wrap {
   width: 100%;
@@ -7883,7 +7883,7 @@ h1, h2, h3, h4, h5,
       font-size: 16px;
       margin-bottom: 0; }
       .services-wrap .text .price span {
-        color: #c49b63; }
+        color: #007abd; }
 
 .ftco-gallery {
   padding: 0; }
@@ -7913,7 +7913,7 @@ h1, h2, h3, h4, h5,
       width: 50px;
       height: 50px;
       content: '';
-      background: #c49b63;
+      background: #007abd;
       z-index: -1;
       -moz-transition: all 0.6s ease;
       -o-transition: all 0.6s ease;
@@ -7967,14 +7967,14 @@ h1, h2, h3, h4, h5,
       width: calc(100% - 80px);
       font-size: 18px; }
       .pricing-entry .text h3 span {
-        background: #151111;
+        background: #ffffff;
         background: url(../images/bg_4.jpg) no-repeat fixed;
         padding-right: 20px; }
     .pricing-entry .text .price {
       width: 80px;
-      color: #c49b63;
+      color: #007abd;
       text-align: right;
-      background: #151111;
+      background: #ffffff;
       background: url(../images/bg_4.jpg) no-repeat fixed;
       font-size: 16px; }
 
@@ -8001,7 +8001,7 @@ h1, h2, h3, h4, h5,
   color: #f8b500; }
 
 .product-details button i {
-  color: #c49b63; }
+  color: #007abd; }
 
 .product-details .quantity-left-minus {
   background: transparent;
@@ -8015,7 +8015,7 @@ h1, h2, h3, h4, h5,
   height: 54px !important;
   text-align: center;
   bordeR: 1px solid rgba(255, 255, 255, 0.1) !important;
-  color: #c49b63 !important;
+  color: #007abd !important;
   padding: 10px 20px; }
 
 .product-details .form-group {
@@ -8045,7 +8045,7 @@ h1, h2, h3, h4, h5,
       appearance: none; }
 
 .ftco-cart button i {
-  color: #c49b63; }
+  color: #007abd; }
 
 .ftco-cart .quantity-left-minus {
   background: transparent;
@@ -8059,7 +8059,7 @@ h1, h2, h3, h4, h5,
   height: 54px !important;
   text-align: center;
   bordeR: 1px solid rgba(255, 255, 255, 0.1) !important;
-  color: #c49b63 !important;
+  color: #007abd !important;
   padding: 0; }
 
 .ftco-cart .form-group {
@@ -8388,7 +8388,7 @@ h1, h2, h3, h4, h5,
     opacity: .5; }
 
 .testimony {
-  background: #c49b63;
+  background: #007abd;
   padding: 2em;
   color: #fff; }
   .testimony.overlay {
@@ -8425,7 +8425,7 @@ h1, h2, h3, h4, h5,
   -ms-border-radius: 50%;
   border-radius: 50%; }
   .ftco-social a span {
-    color: #c49b63; }
+    color: #007abd; }
 
 .form-control {
   height: 58px !important;
@@ -8498,7 +8498,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #c49b63 !important; }
+  background: #007abd !important; }
 
 .ftco-section .ftco-sub-title {
   font-size: 16px;
@@ -8528,7 +8528,7 @@ textarea.form-control {
 .ftco-footer {
   font-size: 16px;
   padding: 7em 0;
-  background: #120f0f; }
+  background: #000000; }
   .ftco-footer .ftco-footer-logo {
     text-transform: uppercase;
     letter-spacing: .1em; }
